--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -22,6 +22,15 @@ li {
 }
 
 textarea {
+  textarea {
   width: 100%;
-  rows: 10;
+  display: block;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: both;
+}
 }
