Added files via upload

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,10 +1,4 @@
-.greeting div,
-.reason div,
-.requesting div,
-.ending div,
-.closing div {
-  display: none;
-}
+
 
 h3,
 h4,
@@ -24,7 +18,7 @@ li {
 textarea {
   width: 100%;
   display: block;
-  height: 150px;
+  height: 90%;
   padding: 12px 20px;
   box-sizing: border-box;
   border: 2px solid #ccc;
@@ -32,3 +26,17 @@ textarea {
   background-color: #f8f8f8;
   resize: both;
 }
+
+.greeting div,
+.reason div,
+.requesting div,
+.ending div,
+.closing div {
+  display: none;
+}
+
+.emailcontainer,.selectcontainer{
+  width: 50%;
+  float: left;
+}
+
