--- a/stylesheets/afterReset.css
+++ b/stylesheets/afterReset.css
@@ -1,5 +1,3 @@
-
-
 body,
 input,
 textarea,
@@ -7,58 +5,79 @@ select {
   font: normal 14px/20px "Helvetica Neue", helvetica, arial, hirakakupro-w3, osaka, "ms pgothic", sans-serif;
 }
 
-
-
 body{
   background-color: #f8f8f8;
+}
 
+h1,h2,h3,h4,h5,h6,p {
+margin:16px 8px;
+}
+
+h1{
+  margin: 40px 8px;
+  font-size: 40px;
+  font-weight: 100;
 }
 
 h3{
-    background-color: grey;
-  margin: 2px;
-  padding: 8px;
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: auto;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    margin: 0;
 }
 
-h3:hover {
-  background-color: lightgrey;
+h3:hover ,h3.active{
+    background-color: #ddd;
 }
+h3:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+h3.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+
 
 ul,label, input{
   margin: 4px;
-
 }
-
 li {
   list-style-type: none;
+  text-align: left;
 }
 
 textarea {
-font-family: arial,sans-serif;
   font-size: 16px;
   width: 100%;
-  display: block;
   height: 80%;
-  padding: 12px 20px;
-  box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
-  background-color: white;
-  resize: both;
+  padding: 16px;
 }
 
 input[type=input] {
     width: 130px;
     box-sizing: border-box;
     border: 2px solid #ccc;
-    border-radius: 4px;
-  
+    border-radius: 2px;
     background-color: white;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
-    padding: 8px 8px;
-   
 }
+input[type=button] {background-color: #e7e7e7; color: black;}
+input[type=button]:hover {background: #ddd;}
+
 
 .navbar {
   overflow: hidden;
@@ -79,10 +98,16 @@ input[type=input] {
 
 
 .emailcontainer,.selectcontainer{
-  margin: 2px;
+  margin: 4px;
   padding: 4px;
   width: 48%;
   float: left;
+}
+.address{
+  padding: 4px;
+  margin:0px 0px 16px;
+      background-color: #eee;
+    color: #444;
 }
 
 .greeting ul,
@@ -99,19 +124,22 @@ input[type=input] {
 }
 
 .structure p{
-  margin: 4px;
+  margin: 0 8px;
 }
-
 
 .main{
   width: 60%;
-  margin: 0 auto;
+  margin: 16px auto;
 }
 .control-label{
   display: inline-block;
   width: 40px;
   text-align: right;
 }
+{
+
+}
+
 
 
 
