--- a/stylesheets/afterReset.css
+++ b/stylesheets/afterReset.css
@@ -6,17 +6,21 @@ select {
 }
 
 body{
-  background-color: #f8f8f8;
 }
 
 h1,h2,h3,h4,h5,h6,p {
-margin:16px 8px;
+margin:16px 8px 16px 0px;
 }
 
 h1{
-  margin: 40px 8px;
+  margin: 40px 8px 40px 0;
   font-size: 40px;
   font-weight: 100;
+}
+
+span{
+font-size: 14px;
+  font-family: "Open Sans", helvetica, sans-serif;
 }
 
 h3{
@@ -78,6 +82,11 @@ input[type=input] {
 input[type=button] {background-color: #e7e7e7; color: black;}
 input[type=button]:hover {background: #ddd;}
 
+span{
+font-size: 14px;
+  font-family: "Open Sans", helvetica, sans-serif;
+   color: #bbb;
+ }
 
 .navbar {
   overflow: hidden;
@@ -96,7 +105,29 @@ input[type=button]:hover {background: #ddd;}
   font-size: 17px;
 }
 
+.card {
+    display: inline-block;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 250px;
 
+  margin: 20px 40px 20px 0px;
+     
+}
+.card a {
+   color: #333;
+ text-decoration: none;
+}
+
+
+.container {
+
+    padding: 2px 16px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 .emailcontainer,.selectcontainer{
   margin: 4px;
   padding: 4px;
@@ -135,10 +166,22 @@ input[type=button]:hover {background: #ddd;}
   display: inline-block;
   width: 40px;
   text-align: right;
+  background: 
 }
-{
+#informal_sample{
+
+    font-family:Georgia;
+    background:LemonChiffon  ;
 
 }
+
+#formal_sample{
+
+     font-family:Georgia;
+    background:LightSkyBlue ;
+
+}
+
 
 
 
