--- a/stylesheets/afterReset.css
+++ b/stylesheets/afterReset.css
@@ -7,7 +7,12 @@ select {
 
 body{
 }
-
+footer{
+    margin: 0px auto;
+    text-align:center;
+    float:left;
+    width: 100%;
+}
 h1,h2,h3,h4,h5,h6,p {
 margin:16px 8px 16px 0px;
 }
