--- a/stylesheets/afterReset.css
+++ b/stylesheets/afterReset.css
@@ -62,7 +62,7 @@ label, input{
   margin: 4px;
 }
 ul{
-  margin: 4px,0px,4px,0px;
+  margin: 4px 0px 4px 0px;
 }
 li {
   list-style-type: none;
@@ -193,7 +193,6 @@ a.navbarright {
   display: inline-block;
   width: 50px;
   text-align: right;
-  background: 
 }
 
 .labelformat{
