--- a/stylesheets/afterReset.css
+++ b/stylesheets/afterReset.css
@@ -78,14 +78,14 @@ li label{
 
 textarea {
   font-size: 16px;
-  width: 100%;
-  height: 80%;
+  width: 95%;
+ min-height: 500px;
   border: 2px solid #ccc;
   border-radius: 4px;
   padding: 16px;
 }
 
-input[type=input] {
+input[type=text] {
     width: 130px;
     box-sizing: border-box;
     border: 2px solid #ccc;
@@ -175,6 +175,7 @@ font-family: "Open Sans", helvetica, sans-serif;
   margin: 4px;
   padding: 4px;
   width: 48%;
+  min-height: 80%;
   float: left;
 }
 .address{
