--- a/stylesheets/afterReset.css
+++ b/stylesheets/afterReset.css
@@ -6,6 +6,7 @@ select {
 }
 
 body{
+   background-color: #FFFFFFFF;
 }
 footer{
 
@@ -123,7 +124,7 @@ font-size: 14px;
 .navbar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -164,7 +165,6 @@ font-family: "Open Sans", helvetica, sans-serif;
 
 
 .container {
-
     padding: 2px 16px;
 }
 
